// 声明语法
syntax = "proto3";
// package内容格式推荐为trpc.{app}.{server}，以trpc为固定前缀，标识这是一个trpc服务协议，app为你的应用名，server为你的服务进程名
// package package trpc.test.trpcgodemo;
// 注意：这里go_package指定的是协议生成文件pb.go在地址
option go_package = ".;message";
service MessageSender {
  rpc Send(MessageRequest) returns (MessageResponse) {}
}
message MessageResponse {
  string responseSomething = 1;
}

message MessageRequest {
  string saySomething = 1;
}